data/derived/comb/progs/unify/prog4221.ml.out
Characters 9-13:
  helpFac (3124 1);;
           ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
